log
Tue 23 Apr 2024 06:41:47 PM UTC: 
 tests:  0|6
total_score: 0/70
553308e
Tue 23 Apr 2024 07:38:41 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|6
total_score: 0/70
d222cbc
Tue 23 Apr 2024 07:39:45 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c:57:1: error: expected identifier or ‘(’ before ‘}’ token
   57 | }
      | ^
Compilation failed
eb3a67c
Tue 23 Apr 2024 07:39:57 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|6
total_score: 0/70
852d496
Tue 23 Apr 2024 07:42:03 PM UTC: 
 hashmap.c | 9 ---------
 1 file changed, 9 deletions(-)
 tests:  0|6
total_score: 0/70
96852bb
